<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2018 - present Instructure, Inc.
  ~
  ~     Licensed under the Apache License, Version 2.0 (the "License");
  ~     you may not use this file except in compliance with the License.
  ~     You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~     Unless required by applicable law or agreed to in writing, software
  ~     distributed under the License is distributed on an "AS IS" BASIS,
  ~     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~     See the License for the specific language governing permissions and
  ~     limitations under the License.
  ~
  -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:minWidth="360dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:paddingStart="16dp"
        android:paddingTop="16dp"
        android:paddingEnd="16dp"
        android:text="@string/reportAProblemDialogTitle"
        android:textColor="@color/textDarkest"
        android:textSize="20sp"/>

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/scrollInstructions"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/subject"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:labelFor="@+id/subjectEditText"
                android:text="@string/errorReportSubject"
                android:textColor="@color/textDarkest"
                android:textSize="14sp"/>

            <EditText
                android:id="@+id/subjectEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/error_report_rounded_corner"
                android:fontFamily="sans-serif"
                android:inputType="textCapSentences"
                android:minHeight="48dp"
                android:padding="8dp"
                android:textSize="14sp"/>

            <TextView
                android:id="@+id/emailAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="sans-serif-medium"
                android:labelFor="@+id/emailAddressEditText"
                android:text="@string/errorReportEmailAddress"
                android:textColor="@color/textDarkest"
                android:textSize="14sp"
                android:visibility="gone"
                tools:visibility="visible"/>

            <EditText
                android:id="@+id/emailAddressEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/error_report_rounded_corner"
                android:fontFamily="sans-serif"
                android:inputType="textEmailAddress"
                android:lines="1"
                android:minHeight="48dp"
                android:padding="8dp"
                android:singleLine="true"
                android:textSize="14sp"
                android:visibility="gone"
                tools:visibility="visible"/>

            <TextView
                android:id="@+id/description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="sans-serif-medium"
                android:labelFor="@+id/descriptionEditText"
                android:text="@string/errorReportDescription"
                android:textColor="@color/textDarkest"
                android:textSize="14sp"/>

            <EditText
                android:id="@+id/descriptionEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/error_report_rounded_corner"
                android:fontFamily="sans-serif"
                android:gravity="top"
                android:inputType="textMultiLine|textCapSentences|textImeMultiLine"
                android:minHeight="75dp"
                android:padding="8dp"
                android:paddingTop="4dp"
                android:textSize="14sp"/>

            <TextView
                android:id="@+id/severityPrompt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="sans-serif-medium"
                android:labelFor="@+id/severitySpinner"
                android:text="@string/errorReportSeverityText"
                android:textColor="@color/textDarkest"
                android:textSize="14sp"/>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/error_report_rounded_corner">

                <Spinner
                    android:id="@+id/severitySpinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="48dp"/>

            </FrameLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end|center_vertical"
                android:padding="-6dp">

                <Button
                    android:id="@+id/cancelButton"
                    style="@style/Base.Widget.AppCompat.Button.ButtonBar.AlertDialog"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cancel"/>

                <Button
                    android:id="@+id/sendButton"
                    style="@style/Base.Widget.AppCompat.Button.ButtonBar.AlertDialog"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/errorReportSend"/>

                <ProgressBar
                    android:layout_marginEnd="16dp"
                    android:id="@+id/progressBar"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:visibility="gone"
                    tools:visibility="visible"/>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>
