<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2017 - present Instructure, Inc.
  ~
  ~     Licensed under the Apache License, Version 2.0 (the "License");
  ~     you may not use this file except in compliance with the License.
  ~     You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~     Unless required by applicable law or agreed to in writing, software
  ~     distributed under the License is distributed on an "AS IS" BASIS,
  ~     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~     See the License for the specific language governing permissions and
  ~     limitations under the License.
  ~
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundLightest">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?android:attr/actionBarSize"
        android:background="@color/backgroundLightestElevated"
        android:elevation="6dp"
        app:theme="@style/ToolBarStyleDark"
        tools:ignore="UnusedAttribute"/>

    <TextView
        android:id="@+id/whatsYourSchoolName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:textColor="@color/textDarkest"
        android:fontFamily="@font/lato_font_family"
        android:text="@string/whatsYourSchoolName"
        android:layout_marginTop="12dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:importantForAccessibility="yes"/>

    <View
        android:id="@+id/topDivider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/backgroundMedium"
        android:layout_marginTop="12dp"/>

    <EditText
        android:id="@+id/domainInput"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:maxLines="1"
        android:lines="1"
        android:hint="@string/loginHint"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:gravity="start|center_vertical"
        android:background="@null"
        android:scrollHorizontally="true"
        android:ellipsize="end"
        android:textCursorDrawable="@drawable/login_cursor"
        android:inputType="textNoSuggestions|textWebEmailAddress"
        android:imeOptions="actionGo"/>

    <View
        android:id="@+id/bottomDivider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/backgroundMedium"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/findSchoolRecyclerView"
        android:contentDescription="@string/matchingSchools"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:clipToPadding="false"/>

    <TextView
        android:id="@+id/loginFlowLogout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:minWidth="120dp"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:text="@string/logout"
        android:textColor="@color/textDark"
        android:fontFamily="@font/lato_font_family"
        android:background="?android:selectableItemBackground"
        android:visibility="gone"
        tools:visibility="visible"/>

</LinearLayout>
