<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2017 - present Instructure, Inc.
  ~
  ~     Licensed under the Apache License, Version 2.0 (the "License");
  ~     you may not use this file except in compliance with the License.
  ~     You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~     Unless required by applicable law or agreed to in writing, software
  ~     distributed under the License is distributed on an "AS IS" BASIS,
  ~     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~     See the License for the specific language governing permissions and
  ~     limitations under the License.
  ~
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/backgroundLightest"
    android:minWidth="320dp"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        app:navigationIcon="@drawable/ic_close"
        app:title="@string/actAsUser"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/backgroundMedium"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:clipToPadding="false"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:padding="24dp">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="146dp"
                android:clipToPadding="false"
                android:importantForAccessibility="noHideDescendants"
                android:paddingTop="8dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:importantForAccessibility="no"
                    android:src="@drawable/ic_masquerade_panda_white"/>

                <ImageView
                    android:id="@+id/redPanda"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:importantForAccessibility="no"
                    android:rotation="-24"
                    android:src="@drawable/ic_masquerade_panda_red"
                    android:transformPivotX="0dp"
                    android:transformPivotY="250dp"
                    android:translationY="30dp"/>

            </FrameLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="@string/masqueradeInfo"
                android:textColor="@color/textDarkest"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/domainLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:hintEnabled="false">

                <EditText
                    android:id="@+id/domainInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/masquerade_input_background"
                    android:hint="@string/domain"
                    android:inputType="textEmailAddress"
                    android:padding="16dp"
                    android:textColorHint="@color/textDark"
                    android:textSize="16sp"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/userIdLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                app:hintEnabled="false">

                <EditText
                    android:id="@+id/userIdInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/masquerade_input_background"
                    android:ems="10"
                    android:hint="@string/userId"
                    android:inputType="number"
                    android:padding="16dp"
                    android:textColorHint="@color/textDark"
                    android:textSize="16sp"/>

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/startButton"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:layout_marginEnd="-4dp"
                android:layout_marginStart="-4dp"
                android:layout_marginTop="6dp"
                android:backgroundTint="@color/backgroundInfo"
                android:text="@string/actAsUser"
                android:textAllCaps="false"
                android:textColor="@color/white"/>

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="6dp"
                android:padding="16dp"
                android:visibility="gone"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>
